terraform/security-groups.tf
resource "aws_security_group" "web_sg" {
    name = "web_security_group"
    description = "Allow inbound HAProxy and SSH Access"
    vpc_id = aws_vpc.main.id

    ingress {
        description      = "HAProxy port"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = [aws_vpc.main.cidr_block]
    }

    ingress {
        description      = "SSH"
        from_port        = 22
        to_port          = 22
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
    }

    egress {
        description      = "HAProxy port"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = [aws_vpc.main.cidr_block]
    }

    tags = {
        Name = "Web Security Group"
    }
}

resource "aws_security_group" "load_balancer_sg" {
    name = "load_balancer_security_group"
    description = "Allow inbound HTTP(s) and outbound Nginx Access"
    vpc_id = aws_vpc.main.id
    ingress {
        description      = "HTTP default port"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

    ingress {
        description      = "HTTPS default port"
        from_port        = 443
        to_port          = 443
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

    ingress {
        description = "SSH"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        description      = "Nginx default port"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = [aws_vpc.main.cidr_block]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "Load Balancer Security Group"
    }
}
